Disable experimental conciseness rule by default

--- a/.mdsmith.yml
+++ b/.mdsmith.yml
@@ -43,9 +43,8 @@ rules:
   paragraph-structure:
     max-sentences: 6
     max-words: 40
-  conciseness-scoring:
-    min-score: 0.20
-    min-words: 20
+  # Experimental rule: keep disabled until classifier-backed scoring is ready.
+  conciseness-scoring: false
   catalog: true
   required-structure: true
   include: true
@@ -100,9 +99,6 @@ overrides:
       paragraph-structure:
         max-sentences: 12
         max-words: 120
-      conciseness-scoring:
-        min-score: 0.15
-        min-words: 30
 
 ignore:
   - "rules/*/bad/**"
