fix: optimize and tighten MDS030 allow-marker matching

--- a/.mdsmith.yml
+++ b/.mdsmith.yml
@@ -12,6 +12,10 @@ rules:
   heading-increment: true
   first-line-heading:
     level: 1
+  empty-section-body:
+    min-level: 2
+    max-level: 6
+    allow-marker: allow-empty-section
   no-duplicate-headings: true
   no-trailing-spaces: true
   no-hard-tabs: true
